<resources>
    <string name="app_name">PizzaMe</string>

    <string name="pizza_places_button_text">Hungry? Let\'s Get You Some Pizzas</string>

    <string name="distance_unit">%1$s mi</string>

    <string name="none_text">None</string>

    <string name="press_back_message">Please click BACK again to exit</string>


    <string name="permission_location_rationale">Location permission is needed for app to fetch data</string>
    <string name="permission_call_rationale">Call permission is needed to call the number</string>


    <string name="generic_error_message">Oops! something went wrong, it is recommended that you restart the app.</string>


    <string name="unable_to_detect_network_error_message">Unable to detect network connection, please check your internet</string>
    <string name="unable_to_detect_location_error_message">Unable to detect your location, please check your location settings</string>

    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>

    <string name="yql_query_text">select * from local.search where  query=\'pizza\'and latitude= %1$s and longitude=%2$s</string>
    <string name="yql_format">json</string>


    <string name="get_info_text">Get Info</string>


    <string name="pizza_places_title_text">Pizza Places Near You</string>
    <string name="city_text">City</string>
    <string name="address_text">Address</string>
    <string name="distance_text">Distance</string>
    <string name="average_rating_text">Average Rating</string>


    <string name="pizza_places_detail_google_map">View In Google Maps</string>
    <string name="pizza_places_website">Website</string>
    <string name="pizza_places_phone">Phone</string>
    <string name="google_maps_format">geo:%1$s,%2$s?q=%3$s</string>
    <string name="google_maps_package_name">com.google.android.apps.maps</string>


    <string name="legal_menu_text">Legal</string>
    <string name="apache_license_header">commons-lang</string>
    <string name="apache_license"><![CDATA[Apache License<br></br><br></br>

                    Copyright &#169; 2017 Udyatbhanu Baliyarsingh

                    <p> Licensed under the Apache License, Version 2.0 (the "License");
                    you may not use this file except in compliance with the License.
                    You may obtain a copy of the License at</p><br></br>

                    <p>http://www.apache.org/licenses/LICENSE-2.0</p><br></br>

                    <p>Unless required by applicable law or agreed to in writing, software
                       distributed under the License is distributed on an "AS IS" BASIS,
                       WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
                       See the License for the specific language governing permissions and
                       limitations under the License.</p>


    ]]></string>


    <string name="libraries_used_header_text">Libraries Used</string>
    <string name="libraries_used_text">The following sets forth attribution notices for third party software that
    may be contained in portions of the PizzaMe application.</string>


    <string name="leak_canary_license_header">LeakCanary</string>
    <string name="leak_canary_license"><![CDATA[Copyright 2015 Square, Inc.<br></br><br></br>


                    <p> Licensed under the Apache License, Version 2.0 (the "License");
                        you may not use this file except in compliance with the License.
                        You may obtain a copy of the License at</p><br></br>

                    <p>http://www.apache.org/licenses/LICENSE-2.0</p><br></br>

                    <p>Unless required by applicable law or agreed to in writing, software
                       distributed under the License is distributed on an "AS IS" BASIS,
                       WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
                       See the License for the specific language governing permissions and
                       limitations under the License.</p>


    ]]></string>


    <string name="retrofit_license_header">Retrofit</string>
    <string name="retrofit_license"><![CDATA[Copyright 2013 Square, Inc.<br></br><br></br>


                    <p> Licensed under the Apache License, Version 2.0 (the "License");
                        you may not use this file except in compliance with the License.
                        You may obtain a copy of the License at</p><br></br>

                    <p>http://www.apache.org/licenses/LICENSE-2.0</p><br></br>

                    <p>Unless required by applicable law or agreed to in writing, software
                       distributed under the License is distributed on an "AS IS" BASIS,
                       WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
                       See the License for the specific language governing permissions and
                       limitations under the License.</p>


    ]]></string>


    <string name="rx_android_license_header">RxAndroid</string>
    <string name="rx_android_license"><![CDATA[Copyright 2015 Square, Inc.<br></br><br></br>


                    <p> Licensed under the Apache License, Version 2.0 (the "License");
                        you may not use this file except in compliance with the License.
                        You may obtain a copy of the License at</p><br></br>

                    <p>http://www.apache.org/licenses/LICENSE-2.0</p><br></br>

                    <p>Unless required by applicable law or agreed to in writing, software
                       distributed under the License is distributed on an "AS IS" BASIS,
                       WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
                       See the License for the specific language governing permissions and
                       limitations under the License.</p>


    ]]></string>


    <string name="eventbus_license_header">Eventbus</string>
    <string name="eventbus_license"><![CDATA[Apache License<br></br><br></br>

                    Copyright &#169; 2017 Udyatbhanu Baliyarsingh

                    <p> Licensed under the Apache License, Version 2.0 (the "License");
                    you may not use this file except in compliance with the License.
                    You may obtain a copy of the License at</p><br></br>

                    <p>http://www.apache.org/licenses/LICENSE-2.0</p><br></br>

                    <p>Unless required by applicable law or agreed to in writing, software
                       distributed under the License is distributed on an "AS IS" BASIS,
                       WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
                       See the License for the specific language governing permissions and
                       limitations under the License.</p>


    ]]></string>


</resources>
