<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="pizzaPlacesDetailsViewModel"
            type="com.home.ubbs.pizzame.viewmodel.PizzaPlacesDetailsViewModel" />
    </data>


    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/collapsible_toolbar_height"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleGravity="center"
                app:expandedTitleMarginBottom="@dimen/spacing_large"
                app:expandedTitleMarginEnd="@dimen/collapsible_toolbar_margin_end"
                app:expandedTitleMarginStart="@dimen/collapsible_toolbar_margin_start"
                app:expandedTitleTextAppearance="@style/CollapsingTextAppearance.TitleSize"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:title="@{pizzaPlacesDetailsViewModel.title}">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    android:tint="@color/button_tint"
                    app:layout_collapseMode="parallax"
                    tools:imageUrl="@{pizzaPlacesDetailsViewModel.toolbarImage}" />


                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            </android.support.design.widget.CollapsingToolbarLayout>


        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            app:behavior_overlapTop="@dimen/nested_scroll_overlap_top"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/md_keylines">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/md_keylines"
                    android:layout_marginLeft="@dimen/md_keylines"
                    android:layout_marginRight="@dimen/md_keylines"
                    app:cardBackgroundColor="@android:color/white">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/details_padding">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/details_padding_medium">

                            <TextView
                                android:id="@+id/address"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:text="@string/address_text" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                app:text="@{pizzaPlacesDetailsViewModel.address}" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/details_padding_medium">

                            <TextView
                                android:id="@+id/city"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:text="@string/city_text" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                app:text="@{pizzaPlacesDetailsViewModel.city}" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/details_padding_medium">

                            <TextView
                                android:id="@+id/distance"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:text="@string/distance_text" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                app:text="@{pizzaPlacesDetailsViewModel.distance}" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/details_padding_medium">

                            <TextView
                                android:id="@+id/average_rating"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:text="@string/average_rating_text" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                app:text="@{pizzaPlacesDetailsViewModel.averageRating}" />

                        </RelativeLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingBottom="@dimen/details_padding_medium"
                            android:weightSum="1">

                            <TextView
                                android:id="@+id/website"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5"
                                android:text="@string/pizza_places_website" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5"
                                android:maxLines="6"
                                android:onClick="@{pizzaPlacesDetailsViewModel::onLinkClick}"
                                android:textAlignment="textEnd"
                                android:textColor="@color/buttonColorBlue"
                                app:text="@{pizzaPlacesDetailsViewModel.website}" />

                        </LinearLayout>


                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/details_padding_medium">

                            <TextView
                                android:id="@+id/phone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:text="@string/pizza_places_phone" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:onClick="@{pizzaPlacesDetailsViewModel::onPhoneLinkClick}"
                                android:textColor="@color/buttonColorBlue"
                                app:text="@{pizzaPlacesDetailsViewModel.phone}" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/map"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:onClick="@{pizzaPlacesDetailsViewModel::onMapLinkClick}"
                                android:paddingBottom="@dimen/details_padding_medium"
                                android:text="@string/pizza_places_detail_google_map"
                                android:textColor="@color/buttonColorBlue" />


                        </RelativeLayout>


                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>


    </android.support.design.widget.CoordinatorLayout>

</layout>